--- a/app/views/common/_menu.html.slim
+++ b/app/views/common/_menu.html.slim
@@ -3,6 +3,11 @@ div
     li  = link_to 'Home', index_url
     li  = link_to 'New Products', new_url
     li  = link_to 'Recently Updated Products', recently_updated_url
+
+    - if user_signed_in?
+      li = link_to current_user.email, edit_user_registration_path
+      li = link_to "Logout", destroy_user_session_path, method: :delete
+    - else
+      li = link_to "Sign Up", new_user_registration_path
+      li = link_to "Login", new_user_session_path
 div
-  h3 Filter By
-  
