--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 
   <body>
     <%= render partial: 'common/menu' %>
+    <div class="alert alert-info"><%= notice %></div>
+    <div class="alert alert-warning"><%= alert %></div>
+
     <%= yield %>
   </body>
 </html>
