--- a/app/views/common/_menu.html.slim
+++ b/app/views/common/_menu.html.slim
@@ -1,6 +1,7 @@
 div
   ul
     li  = link_to 'Home', index_url
+    li  = link_to 'Contact Us', contact_url
     li  = link_to 'New Products', new_url
     li  = link_to 'Recently Updated Products', recently_updated_url
 
