--- a/app/views/common/_menu.html.slim
+++ b/app/views/common/_menu.html.slim
@@ -2,6 +2,7 @@ div
   ul
     li  = link_to 'Home', index_url
     li  = link_to 'Contact Us', contact_url
+    li  = link_to 'About Us', about_url
     li  = link_to 'New Products', new_url
     li  = link_to 'Recently Updated Products', recently_updated_url
 
@@ -11,4 +12,8 @@ div
     - else
       li = link_to "Sign Up", new_user_registration_path
       li = link_to "Login", new_user_session_path
+
 div
+  = form_tag search_results_path, method: :get do
+    = text_field_tag :search_keywords
+    = submit_tag 'Search'
