--- a/app/views/products/search_results.html.slim
+++ b/app/views/products/search_results.html.slim
@@ -8,3 +8,4 @@ h1 Search Results for #{params[:search_keywords]}
       == link_to product_url(prod) do
         .imageDiv data-text=prod.name
           = image_tag(prod.image(:large), :alt => prod.name)
+= paginate @products
