Added shopping cart functionality. Added routes, controller and view for the cart. Added ability to edit quantity and remove items.

--- a/app/views/shopping_carts/index.html.slim
+++ b/app/views/shopping_carts/index.html.slim
@@ -1,1 +1,11 @@
 h2 Cart
+table
+  - @products_in_cart.each do |product|
+    tr
+      td = product.name
+      td
+        | Quantity:
+        = product.quantity
+      td = link_to '+', increase_item_quantity_url(product.id), method: :post
+      td = link_to '-', decrease_item_quantity_url(product.id), method: :post
+      td = link_to 'x', remove_from_cart_url(product.id), method: :post
