--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -1,13 +1,7 @@
 // Place all the styles related to the Product controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-body {
-  height: 100%;
-  width: 100%;
-
-
-  #productImage {
-    width: 450px;
-    height: auto;
-  }
+#productImage {
+  height: 300px;
+  width: auto;
 }
