--- a/app/views/products/search_results.html.slim
+++ b/app/views/products/search_results.html.slim
@@ -1,11 +1,12 @@
 h1 Search Results for #{params[:search_keywords]}
 
 - if @products.size.zero?
-    p No products found.
+  .ui.four.column.centered.grid
+    .six.wide.column
+      |Sorry, no products found.
 - else
-  .products
-    - @products.each do |prod|
-      == link_to product_url(prod) do
-        .imageDiv data-text=prod.name
-          = image_tag(prod.image(:large), :alt => prod.name)
+  .ui.four.column.centered.grid
+    = render partial: 'product',
+      collection: @products
+
 = paginate @products
