--- a/app/views/products/updated_products.html.slim
+++ b/app/views/products/updated_products.html.slim
@@ -1,10 +1,10 @@
 h1 Recently Updated Products
 
-.products
-  - @updated_products.each do |prod|
-    == link_to product_url(prod) do
-      .imageDiv data-text=prod.name
-        = image_tag(prod.image(:large), :alt => prod.name)
-  - if @updated_products.empty?
-    h2 Sorry, there are no recently updated products to show at this time.
+.ui.four.column.centered.grid
+  = render partial: 'product',
+    collection: @new_products
+- if @updated_products.empty?
+  .ui.four.column.centered.grid
+    .six.wide.column
+      |Sorry, there are no recently updated products to show at this time.
 = paginate @updated_products
