Added Stripe integration to checkout.

--- a/app/views/shopping_carts/index.html.slim
+++ b/app/views/shopping_carts/index.html.slim
@@ -46,4 +46,4 @@ h2 Cart
       =number_to_currency(@total)
 
     .ui.button
-      = link_to 'Checkout', checkout_url
+      = link_to 'Proceed to Payment', charges_new_path
